<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/loginTitle"
            style="@style/TitleStyle"
            android:text="@string/login_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginButton"
            style="@style/SubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/usernameTitle"
            style="@style/SubtitleStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/username_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            style="@style/TextStyle"
            android:layout_width="@dimen/login_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameTitle" />

        <TextView
            android:id="@+id/passwordTitle"
            style="@style/SubtitleStyle"
            android:layout_width="@dimen/login_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/password_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/TextStyle"
            android:layout_width="@dimen/login_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTitle" />

        <Button
            android:id="@+id/signupButton"
            style="@style/SubtitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@android:color/holo_green_light"
            android:text="@string/sign_up_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>