<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarSize="@dimen/title_size">

    <TextView
        android:id="@+id/shoeNameItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_green_dark"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/empty_text"
        android:textColor="@color/title_color"
        android:textSize="@dimen/shoe_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sizeTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/size_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoeNameItem"
        style="@style/SubtitleStyle" />

    <TextView
        android:id="@+id/companyTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/company_title"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeTitleText" />

    <TextView
        android:id="@+id/shoeSizeItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/empty_text"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sizeTitleText"
        app:layout_constraintTop_toBottomOf="@+id/shoeNameItem" />

    <TextView
        android:id="@+id/shoeCompanyItem"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/empty_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/companyTitleText"
        app:layout_constraintTop_toBottomOf="@+id/sizeTitleText" />

    <TextView
        android:id="@+id/shoeDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/description_title"
        android:textColor="@color/title_color"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyTitleText" />

    <TextView
        android:id="@+id/shoeDescriptionItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/empty_text"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shoeDescriptionTitle"
        app:layout_constraintTop_toBottomOf="@+id/companyTitleText" />
</androidx.constraintlayout.widget.ConstraintLayout>